# legacy-flight-autogen

./: README.md  legacy.py  main.py  pyproject.toml  requirements.txt
